[package]
name = "cf-alias"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "=1.0.65"
chrono = "=0.4.22"
clap = "=3.2.17"
clap_complete = "=3.2.3"
clipboard = "=0.5.0"
dirs = "=4.0.0"
fstrings = "=0.2.3"
memorable-wordlist = "=0.1.7"
notify-rust = "=4.5.8"
open = "=3.0.3"
reqwest = { version = "=0.11.11", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "=1.0.143", features = ["derive"] }
serde_json = "=1.0.83"
tokio = { version = "=1.20.1", features = ["macros", "rt-multi-thread"] }
rand = "=0.8.4"
